- missing curriculum identifiers